--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,15 @@ dependencies = [
     "z3-solver",
 ]
 
+[project.scripts]
+werewolf = "src.__main__:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
 
 [tool.uv]
 dev-dependencies = []
