--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
-[tool.uv]
-dev-dependencies = []
+[dependency-groups]
+dev = [
+    "pytest>=7.0.0",
+]
 
