--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A werewolf puzzle solver and generator"
 requires-python = ">=3.10"
 dependencies = [
     "z3-solver",
+    "tqdm",
 ]
 
 [project.scripts]
@@ -20,5 +21,9 @@ packages = ["src"]
 [dependency-groups]
 dev = [
     "pytest>=7.0.0",
+]
+analysis = [
+    "matplotlib",
+    "tqdm",
 ]
 
