--- a/asset_generation/pyproject.toml
+++ b/asset_generation/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/asset_generation"]
+
 [dependency-groups]
 dev = [
     "pytest>=7.0.0",
